Musical statements for week 1

--- a/Assignments/HW1_RissetBeats/statements.html
+++ b/Assignments/HW1_RissetBeats/statements.html
@@ -48,144 +48,202 @@
 									<div id="page-content">
 
 
-										<h2>"Tune 1"</h2>
-										<h3>by Anonymous</h3>
+										<h2>"Contrary Tone"</h2>
+										<h3>by Josh</h3>
 
 										<audio controls>
-											<source src="statements/statement_tune-1.wav" type="audio/wav">
+											<source src="statements/contrarytone.wav" type="audio/wav">
 										  Your browser does not support the audio element.
 										  </audio> 
 
-										<hr>
-										<h2>"Hypnosis" with twinkle twinkle notes</h2>
-										<h3>by Tom Boccuto</h3>
-										<audio controls>
-											<source src="statements/Tom.wav" type="audio/wav">
-										  Your browser does not support the audio element.
-										  </audio> 
+										<HR>
+										<h2>"Result44100sr500fpn"</h2>
+										<h3>by Ethan</h3>
 
-										<hr>
-										<h2>"Darude Sandstorm" </h2>
-										<h3>by Liz</h3>
 										<audio controls>
-											<source src="statements/sandstorm.wav" type="audio/wav">
+											<source src="statements/Result44100sr500fpn.mp3" type="audio/mp3">
 										Your browser does not support the audio element.
 										</audio> 
 
-										<hr>
-										<h2>"Morning Waves"</h2>
-										<h3>by Anonymous</h3>
-										<audio controls>
-											<source src="statements/morning_waves.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
+										<HR>
+											<h2>"W00t"</h2>
+											<h3>by Ben</h3>
+	
+											<audio controls>
+												<source src="statements/w00t.wav" type="audio/mp3">
+											Your browser does not support the audio element.
+											</audio> 
 
-										<hr>
-										<h2>"Untitled"</h2>
-										<h3>by Alexa</h3>
-										<audio controls>
-											<source src="statements/alexa.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
-
-										<hr>
-										<h2>"UsheRisset"</h2>
-										<h3>by Joe</h3>
-										<audio controls>
-											<source src="statements/UsheRisset.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
-
-										<hr>
-										<h2>"Reach" (Hommes)</h2>
-										<h3>by CJ</h3>
-										<audio controls>
-											<source src="statements/cj.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
-
-										<hr>
-										<h2>Risset Cover of "Imagine" by John Lennon</h2>
-										<h3>by Griff</h3>
-										<audio controls>
-											<source src="statements/imagine.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
-
-										<hr>
-										<h2>"Melbeggio"</h2>
-										<h3>by Dylan</h3>
-										<audio controls>
-											<source src="statements/melbeggio.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
-
-										<hr>
-										<h2>"Lights Out"</h2>
-										<h3>by Anonymous</h3>
-										<audio controls>
-											<source src="statements/lightsout.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
-
-										<hr>
-										<h2>"Goofy Goblins"</h2>
-										<h3>by Mike S</h3>
-										<audio controls>
-											<source src="statements/goofy_goblins.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
-
-										<hr>
-										<h2>"Up And Down"</h2>
-										<h3>by Cat in The Hat</h3>
-										<audio controls>
-											<source src="statements/up_and_down.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
-
-										<hr>
-										<h2>"Sunnyside PIII"</h2>
-										<h3>by Anonymous</h3>
-										<audio controls>
-											<source src="statements/sunnyside.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
+										<HR>
+											<h2>"Slow Shuffle"</h2>
+											<h3>by Mike</h3>
+	
+											<audio controls>
+												<source src="statements/slowShuffle.mp3" type="audio/mp3">
+											Your browser does not support the audio element.
+											</audio> 
 
 
-										<hr>
-										<h2>"2020"</h2>
-										<h3>by Michael Tecce</h3>
-										<audio controls>
-											<source src="statements/2020.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
-
-										<hr>
-										<h2>"HITR-1"</h2>
-										<h3>by Anonymous</h3>
-										<audio controls>
-											<source src="statements/HITR-1.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
+										<HR>
+											<h2>"Stella Stella" (By Hoshimachi Suisei)</h2>
+											<h3>by Dylan</h3>
+	
+											<audio controls>
+												<source src="statements/stellaStella.mp3" type="audio/mp3">
+											Your browser does not support the audio element.
+											</audio> 
 
 
-										<hr>
-										<h2>"2020"</h2>
-										<h3>by Michael Tecce</h3>
-										<audio controls>
-											<source src="statements/2020.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
+										<HR>
+											<h2>"Mymstat"</h2>
+											<h3>by Connor</h3>
+	
+											<audio controls>
+												<source src="statements/Mymstat.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
 
-										<hr>
-										<h2>"The Creep"</h2>
-										<h3>by Luke</h3>
-										<audio controls>
-											<source src="statements/thecreep.wav" type="audio/wav">
-										Your browser does not support the audio element.
-										</audio> 
+										<HR>
+											<h2>"The Solitary Reflection"</h2>
+											<h3>by JavascriptGuru2022</h3>
+	
+											<audio controls>
+												<source src="statements/WG_Musical_Statement-2.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
 
+										<!--<HR>
+											<h2>"Space To Grow"</h2>
+											<h3>by Diane</h3>
+	
+											<audio controls>
+												<source src="statements/diane.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+										!-->
+
+										<HR>
+											<h2>"The Pokemon Theme Song: Challenged Accepted and Succeeded"</h2>
+											<h3>by Hannah Jeffers</h3>
+	
+											<audio controls>
+												<source src="statements/pokemonthemesong.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+										<HR>
+											<h2>"Clocks Intro"</h2>
+											<h3>by David</h3>
+	
+											<audio controls>
+												<source src="statements/clocks_intro.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+										<HR>
+											<h2>"Spooks"</h2>
+											<h3>by Kacey</h3>
+	
+											<audio controls>
+												<source src="statements/spooks.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+
+										<HR>
+											<h2>"Mary's Lamb"</h2>
+											<h3>by Emily Musgrove</h3>
+	
+											<audio controls>
+												<source src="statements/MaryHadALittleLamb.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+										<HR>
+											<h2>"Mario"</h2>
+											<h3>by Abby</h3>
+	
+											<audio controls>
+												<source src="statements/mario.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+										<HR>
+											<h2>"Pantheon Champion Theme from <a href = "https://youtu.be/9Zub8agQjrw">League of Legends</a>"</h2>
+											<h3>by Brenden</h3>
+	
+											<audio controls>
+												<source src="statements/Pantheon.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+										<HR>
+											<h2>"Buddy Holly"</h2>
+											<h3>by A</h3>
+	
+											<audio controls>
+												<source src="statements/buddy.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+
+										<HR>
+											<h2>"SSTune"</h2>
+											<h3>by Anonymous</h3>
+	
+											<audio controls>
+												<source src="statements/SSTune.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+										<HR>
+											<h2>"Creepy circus intro"</h2>
+											<h3>by Roger</h3>
+	
+											<audio controls>
+												<source src="statements/creepycircus.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+
+										<HR>
+											<h2>"Kaleidoscope"</h2>
+											<h3>by Anonymous</h3>
+	
+											<audio controls>
+												<source src="statements/kaleidascope.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+										<HR>
+											<h2>"Matt Wallace"</h2>
+											<h3>by Matt Wallace</h3>
+	
+											<audio controls>
+												<source src="statements/MattWallace.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+
+
+										<HR>
+											<h2>"Megalovania"</h2>
+											<h3>by James</h3>
+	
+											<audio controls>
+												<source src="statements/MattWallace.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+
+										<HR>
+											<h2>"Early Morning Quiet"</h2>
+											<h3>by Henry</h3>
+	
+											<audio controls>
+												<source src="statements/EarlyMorningQuiet.wav" type="audio/wav">
+											Your browser does not support the audio element.
+											</audio> 
+										
                                     
                                 </div>
 						</div>
@@ -233,6 +291,11 @@
 											<ul>
 												<li>
 													<a href = "../../Assignments/HW1_RissetBeats">HW1: Risset Beats</a>
+													<ul>
+														<li>
+															<a href = "../../Assignments/HW1_RissetBeats/statements.html">Musical Statements</a>
+														</li>
+													</ul>
 												</li>
 												<li><a href = "../../Assignments/HW2_DigitalInstruments">HW2: Digital Instruments</a>
 												</li>
