--- a/Assignments/HW5_VersionID/index.html
+++ b/Assignments/HW5_VersionID/index.html
@@ -535,6 +535,11 @@
 											<ul>
 												<li>
 													<a href = "../../Assignments/HW1_RissetBeats">HW1: Risset Beats</a>
+													<ul>
+														<li>
+															<a href = "../../Assignments/HW1_RissetBeats/statements.html">Musical Statements</a>
+														</li>
+													</ul>
 												</li>
 												<li><a href = "../../Assignments/HW2_DigitalInstruments">HW2: Digital Instruments</a>
 												</li>
