--- a/ClassExercises/Week4/Week4_CombFilters/index.html
+++ b/ClassExercises/Week4/Week4_CombFilters/index.html
@@ -214,6 +214,7 @@
 													<a href = "../../../ClassExercises/Week4/Week4_CombFilters/index.html">Week 4: Comb Filters</a>
 												</li>
 												<li><a href = "../../../ClassExercises/Week4/Week4_DFT/index.html">Week 4: The Discrete Fourier Transform</a></li>
+												<li><a href = "../../../ClassExercises/Week6/2DArrays/index.html">Week 6: 2D Arrays And Spectrograms</a></li>
 												<!--
 												<li><a href = "../../../ClassExercises/Week5/Week5_ApplyingDFT/index.html">Week 5: Applying The DFT</a></li>
 												<li><a href = "../../../ClassExercises/Week6/ComplexDFT/index.html">Week 6: Complex DFT</a></li>
