Adding complex DFT exercise

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 <tr><td>14</td><td>Fri 2/17/2023</td><td>Converting Frequency Units on Real Audio, Begin The Short-Time Fourier Transform (STFT)</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a> Due Before Class 
 </td></tr>
 <tr><td>15</td><td>Mon 2/20/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td><ul><li><a href = "https://musiclab.chromeexperiments.com/spectrogram">Live spectrogram demo in the browser</a></li></ul></td><td></td></tr>
-<tr><td>16</td><td>Wed 2/22/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td bgcolor=#f4e6e7>Module 11: STFT, Window Functions Due Before Class 
+<tr><td>16</td><td>Wed 2/22/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a> Due Before Class 
 </td></tr>
 <tr><td></td><td>Thu 2/23/2023</td><td></td><td></td><td bgcolor=#f4e6e7>Assignment 2 Due
 </td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7>Module 12: Complex DFT And Phasors Due Before Class
@@ -508,7 +508,7 @@
 <tr><td>25</td><td>Wed 3/22/2023</td><td>MFCC Features, Inverting MFCC</td><td><ul><li><a href = "ClassExercises/Week8/Week8_MFCC/Mel.html">Code from today</a></li></ul></td><td></td></tr>
 <tr><td>26</td><td>Fri 3/24/2023</td><td>Cross-Similarity Matrices, Dynamic Time Warping</td><td></td><td></td></tr>
 <tr><td>27</td><td>Mon 3/27/2023</td><td>Dynamic Time Warping Continued</td><td></td><td></td></tr>
-<tr><td>28</td><td>Wed 3/29/2023</td><td>Chroma Features, Shepard Tones</td><td></td><td></td></tr>
+<tr><td>28</td><td>Wed 3/29/2023</td><td>Chroma Features, Shepard Tones</td><td><ul><li><a href = "https://www.youtube.com/watch?v=YUOR7_40-dQ">Shepard Tone Visualization</a></li></ul></td><td></td></tr>
 <tr><td>29</td><td>Fri 3/31/2023</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td></td></tr>
 <tr><td>30</td><td>Mon 4/3/2023</td><td>Harmonic-Percussive Source Separation</td><td></td><td></td></tr>
 <tr><td>31</td><td>Wed 4/5/2023</td><td>Matrix Multiplication for Audio Activations</td><td></td><td></td></tr>
@@ -994,9 +994,8 @@
 												</li>
 												<li><a href = "ClassExercises/Week4/Week4_DFT/index.html">Week 4: The Discrete Fourier Transform</a></li>
 												<li><a href = "ClassExercises/Week6/2DArrays/index.html">Week 6: 2D Arrays And Spectrograms</a></li>
-												<!--
-												<li><a href = "ClassExercises/Week5/Week5_ApplyingDFT/index.html">Week 5: Applying The DFT</a></li>
 												<li><a href = "ClassExercises/Week6/ComplexDFT/index.html">Week 6: Complex DFT</a></li>
+												<!--
 												<li><a href = "ClassExercises/Week7/Week7_DFTConvolutions">Week 7: DFT And Convolutions</a></li>
 												<li><a href = "ClassExercises/Week7/Week7_STFTNoiseShaping">Week 7: STFT Noise Shaping</a></li>
 												<li><a href = "ClassExercises/Week8/Week8_ANF">Week 8: Audio Novelty Functions</a></li>
@@ -1018,8 +1017,8 @@
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module8/Video1">Module 8: Discovering The Discrete Fourier Transform</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a></li>
+												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a></li>
 												<!--
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module11/Video0">Module 11: STFT, Window Functions, Complex Numbers</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module13/Video1.html">Module 13: Aliasing, Inverse DFT</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a></li>
