Drum-like sound broken link

--- a/Assignments/HW2_DigitalInstruments/index.html
+++ b/Assignments/HW2_DigitalInstruments/index.html
@@ -80,7 +80,7 @@
 																<a href = "#brass">Brass Notes (5 Points)</a>
 															</li>
 															<li>
-																<a href = "drumlike">Drum-Like Sound (5 Points)</a>
+																<a href = "#drumlike">Drum-Like Sound (5 Points)</a>
 															</li>
 															<li>
 																<a href = "#snaredrum">Snare Drum (3 Points)</a>
