--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 <tr><td>16</td><td>Wed 2/22/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a> Due Before Class 
 </td></tr>
 <tr><td></td><td>Thu 2/23/2023</td><td></td><td></td><td bgcolor=#f4e6e7>Assignment 2 Due
-</td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7>Module 12: Complex DFT And Phasors Due Before Class
+</td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a> Due Before Class
 <HR>Assignment 3: Vocoders And Phase Retrieval Out
 </td></tr>
 <tr><td>18</td><td>Mon 2/27/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td bgcolor=#f4e6e7>Module 13: Aliasing Due Before Class
@@ -1018,8 +1018,8 @@
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a></li>
-												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a></li>
+												<!--
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module13/Video1.html">Module 13: Aliasing, Inverse DFT</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a></li>
 												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module15/Video0">Module 15: The Z Transform</a></li>
