New links for modules

--- a/index.html
+++ b/index.html
@@ -455,41 +455,41 @@
 <tr><td colspan = "5"><h2><b><a name = "timedomain">Unit 1: Time Domain Audio Processing</a></b></h2><p></p></td></tr>
 <tr><td>1</td><td>Wed 1/18/2023</td><td>Course Overview, Sneak Preview, Digital Audio Representations</td><td><ul><li><a href = "https://docs.google.com/presentation/d/1iGzlfXFMncoEZ0IIRhtumJZHFwEgrdSW-C8RH6GsBrc/edit?usp=share_link">Slides from today</a></li><li><a href = "ClassExercises/Week1/Week1_AudioReverseGame">Audio Reverse Game</a></li></ul></td><td></td></tr>
 <tr><td></td><td>Thu 1/19/2023</td><td></td><td></td><td bgcolor=#f4e6e7><a href = "Assignments/Survey">Survey</a> and <a href = "https://ursinus.instructure.com/courses/15546/quizzes/21549">syllabus quiz</a> due by 11:59PM
-</td></tr><tr><td>2</td><td>Fri 1/20/2023</td><td>Python/Numpy Basics, Slicing/Reversing Audio, Sinusoids/Pitch</td><td><ul><a href = "https://donsheehy.github.io/datastructures/fullbook.pdf">Sheehy</a> Ch. 2 for python intro</li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module1/Video0">Module 1: Python Basics</a> Due by 11:59 PM
+</td></tr><tr><td>2</td><td>Fri 1/20/2023</td><td>Python/Numpy Basics, Slicing/Reversing Audio, Sinusoids/Pitch</td><td><ul><a href = "https://donsheehy.github.io/datastructures/fullbook.pdf">Sheehy</a> Ch. 2 for python intro</li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module1/Video0">Module 1: Python Basics</a> Due by 11:59 PM
 </td></tr>
-<tr><td>3</td><td>Mon 1/23/2023</td><td>Square Waves, Triangle Waves, Sawtooth Waves, Noise, Beat Frequencies</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a> Due Before Class
+<tr><td>3</td><td>Mon 1/23/2023</td><td>Square Waves, Triangle Waves, Sawtooth Waves, Noise, Beat Frequencies</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a> Due Before Class
 <HR><a href = "Assignments/HW1_RissetBeats">Assignment 1: Risset Beats</a> Out
 </td></tr>
-<tr><td>4</td><td>Wed 1/25/2023</td><td>Octaves, Harmonicity, Circle of Fifths / Pythagorean Tuning</td><td><ul><li><a href = "ClassExercises/Week2/Week2_Harmonicity">Harmonicity Notes</a></li><li><a href = "https://en.wikipedia.org/wiki/Pythagorean_comma">Wikipedia Notes on The Pythagorean Comma</a></li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a> Due Before Class 
+<tr><td>4</td><td>Wed 1/25/2023</td><td>Octaves, Harmonicity, Circle of Fifths / Pythagorean Tuning</td><td><ul><li><a href = "ClassExercises/Week2/Week2_Harmonicity">Harmonicity Notes</a></li><li><a href = "https://en.wikipedia.org/wiki/Pythagorean_comma">Wikipedia Notes on The Pythagorean Comma</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a> Due Before Class 
 </td></tr>
 <tr><td>5</td><td>Fri 1/27/2023</td><td>Finish Pythagorean Tuning, Chirps, Vibrato, Frequency Sonification</td><td></td><td></td></tr>
-<tr><td>6</td><td>Mon 1/30/2023</td><td>Zero Crossings, Consonant/Vowel Filtering, Dynamics, Intensity, Loudness</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency</a> Due Before Class 
+<tr><td>6</td><td>Mon 1/30/2023</td><td>Zero Crossings, Consonant/Vowel Filtering, Dynamics, Intensity, Loudness</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency</a> Due Before Class 
 </td></tr>
 <tr><td>7</td><td>Wed 2/1/2023</td><td>HW1: Risset Beats Q&A, Work Day</td><td><ul><li><a href = "Assignments/HW1_RissetBeats/HappyBirthdaySquareWaves.html">Happy Birthday Square Waves</a></li><li><a href = "Assignments/HW1_RissetBeats/PhaseAggregation.html">Phase Aggregation (Part 2) Notes</a></li> </ul></td><td></td></tr>
-<tr><td>8</td><td>Fri 2/3/2023</td><td>Timbre, FM Synthesis, ADSR</td><td><ul><li><a href = "https://web.eecs.umich.edu/~fessler/course/100/misc/chowning-73-tso.pdf">John Chowning's 1973 paper on FM synthesis</a></li><li><a href = "https://en.wikipedia.org/wiki/Yamaha_DX7">Yamaha DX7</a></li><li><a href = "https://ccrma.stanford.edu/">Stanford CCRMA</a></li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a> Due Before Class
+<tr><td>8</td><td>Fri 2/3/2023</td><td>Timbre, FM Synthesis, ADSR</td><td><ul><li><a href = "https://web.eecs.umich.edu/~fessler/course/100/misc/chowning-73-tso.pdf">John Chowning's 1973 paper on FM synthesis</a></li><li><a href = "https://en.wikipedia.org/wiki/Yamaha_DX7">Yamaha DX7</a></li><li><a href = "https://ccrma.stanford.edu/">Stanford CCRMA</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a> Due Before Class
 <HR>Assignment 1 Due
 </td></tr>
-<tr><td>9</td><td>Mon 2/6/2023</td><td>Echoes / Impulse Responses / Convolution</td><td><ul><li><a href = "http://www.echothief.com/">Echo Thief</a><li><a href = "https://www.youtube.com/watch?v=aT2YGXxYx-w">Impluse response of a nuclear power plant</a></li></ul></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a> due before class
+<tr><td>9</td><td>Mon 2/6/2023</td><td>Echoes / Impulse Responses / Convolution</td><td><ul><li><a href = "http://www.echothief.com/">Echo Thief</a><li><a href = "https://www.youtube.com/watch?v=aT2YGXxYx-w">Impluse response of a nuclear power plant</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a> due before class
 <HR><a href = "Assignments/HW2_DigitalInstruments">Assignment 2: Digital Instruments</a> Out 
 </td></tr>
-<tr><td>10</td><td>Wed 2/8/2023</td><td>Comb Filters</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a> Due Before Class 
+<tr><td>10</td><td>Wed 2/8/2023</td><td>Comb Filters</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a> Due Before Class 
 </td></tr>
 <tr><td colspan = "5"><h2><b><a name = "freqdomain">Unit 2: Frequency Domain Audio Processing</a></b></h2><p></p></td></tr>
-<tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module8/Video1">Module 8: Discovering The Fourier Transform</a> Due Before Class 
+<tr><td>11</td><td>Fri 2/10/2023</td><td>Discovering The Discrete Fourier Transform (DFT)</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module8/Video1">Module 8: Discovering The Fourier Transform</a> Due Before Class 
 </td></tr>
-<tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a> Due Before Class 
+<tr><td>12</td><td>Mon 2/13/2023</td><td>Real-Valued DFT Definition, Amplitude/Phase Shifts</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a> Due Before Class 
 </td></tr>
 <tr><td>13</td><td>Wed 2/15/2023</td><td>Exploring The DFT on Audio Data: Pitch And Timbre, Fast(er) Risset Beats</td><td></td><td></td></tr>
-<tr><td>14</td><td>Fri 2/17/2023</td><td>Converting Frequency Units on Real Audio, Begin The Short-Time Fourier Transform (STFT)</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a> Due Before Class 
+<tr><td>14</td><td>Fri 2/17/2023</td><td>Converting Frequency Units on Real Audio, Begin The Short-Time Fourier Transform (STFT)</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a> Due Before Class 
 </td></tr>
 <tr><td>15</td><td>Mon 2/20/2023</td><td>The Short-Time Fourier Transform (STFT), Spectrograms</td><td><ul><li><a href = "https://musiclab.chromeexperiments.com/spectrogram">Live spectrogram demo in the browser</a></li></ul></td><td></td></tr>
-<tr><td>16</td><td>Wed 2/22/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a> Due Before Class 
+<tr><td>16</td><td>Wed 2/22/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a> Due Before Class 
 </td></tr>
 <tr><td></td><td>Thu 2/23/2023</td><td></td><td></td><td bgcolor=#f4e6e7>Assignment 2 Due
-</td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a> Due Before Class
+</td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a> Due Before Class
 <HR>Assignment 3: Vocoders And Phase Retrieval Out
 </td></tr>
-<tr><td>18</td><td>Mon 2/27/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td bgcolor=#f4e6e7>Module 13: Aliasing Due Before Class
+<tr><td>18</td><td>Mon 2/27/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module13/Video1.html">Module 13: Aliasing</a> Due Before Class
 </td></tr>
 <tr><td>19</td><td>Wed 3/1/2023</td><td>Convolution/multiplication duality</td><td></td><td bgcolor=#f4e6e7>Module 14: Convolution And Multiplication Duality Due Before Class 
 </td></tr>
@@ -1007,25 +1007,25 @@
                                         <li>
 											<span class="opener">Pre-Class Modules</span>
 											<ul>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module1/Video0">Module 1: Digital Audio Waveforms, Python Basics</a></a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency, Vibrato, Sonification</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module8/Video1">Module 8: Discovering The Discrete Fourier Transform</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a></li>
+												<li><a href = "../Modules/Module1/Video0">Module 1: Digital Audio Waveforms, Python Basics</a></a></li>
+												<li><a href = "../Modules/Module2/Video1">Module 2: Sinusoids And Simple Numpy Tunes</a></li>
+												<li><a href = "../Modules/Module3/Video0">Module 3: Standing Waves And Plucked String Synthesis</a></li>
+												<li><a href = "../Modules/Module4/Video1">Module 4: Chirps, Instantaneous Frequency, Vibrato, Sonification</a></li>
+												<li><a href = "../Modules/Module5/Video1">Module 5: Zero Crossings Filtering, Loudness And Intensity / Dynamics</a></li>
+												<li><a href = "../Modules/Module6/Video0">Module 6: Timbre, FM Synthesis, Python Methods As Parameters</a></li>
+												<li><a href = "../Modules/Module7/Video1">Module 7: Echoes, Impulse Responses, And Convolution</a></li>
+												<li><a href = "../Modules/Module8/Video1">Module 8: Discovering The Discrete Fourier Transform</a></li>
+												<li><a href = "../Modules/Module9/Video0">Module 9: The Real Discrete Fourier Transform (DFT), Amplitude/Phase</a></li>
+												<li><a href = "../Modules/Module10/Video1">Module 10: DFT on Real Audio, DFT on Sawtooth/Square Waves, Fundamental DFT Properties, Inverse DFT And Fast Risset</a></li>
+												<li><a href = "../Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a></li>
+												<li><a href = "../Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a></li>
+												<li><a href = "../Modules/Module13/Video1.html">Module 13: Aliasing, Inverse DFT</a></li>
 												<!--
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module13/Video1.html">Module 13: Aliasing, Inverse DFT</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module15/Video0">Module 15: The Z Transform</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module16/Video0">Module 16: Audio Novelty Functions, Tempo Estimation, Matrix Multiplication</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module17/Video0">Module 17: Cross-Similarity, Warping Paths, Dynamic Time Warping</a></li>
-												<li><a href = "https://ursinus-cs372-s2023.github.io/Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
+												<li><a href = "../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a></li>
+												<li><a href = "../Modules/Module15/Video0">Module 15: The Z Transform</a></li>
+												<li><a href = "../Modules/Module16/Video0">Module 16: Audio Novelty Functions, Tempo Estimation, Matrix Multiplication</a></li>
+												<li><a href = "../Modules/Module17/Video0">Module 17: Cross-Similarity, Warping Paths, Dynamic Time Warping</a></li>
+												<li><a href = "../Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
 												!-->
 											</ul>
 										</li>
